# haskdeep

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  haskdeep.cabal  known.haskdeep  stack.yaml
.github/workflows/: build.yml
.halcyon/: constraints
haskdeep/: Main.hs
haskdeep/HaskDeep/Command/: Main.hs  Options.hs
src/: HaskDeep.hs  Main.hs  Options.hs
src/HaskDeep/: Computation.hs  ComputationMode.hs  Configuration.hs  HashSet.hs  KnownHash.hs
src/HaskDeep/KnownHash/: Reader.hs  Writer.hs
