name:                haskdeep
version:             0.1.0.0
cabal-version:       >=1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           © 2012 Mauro Taraborelli
author:              Mauro Taraborelli
maintainer:          maurotaraborelli@gmail.com
stability:           experimental
homepage:            https://github.com/maurotrb/haskdeep
bug-reports:         https://github.com/maurotrb/haskdeep/issues
synopsis:            Computes and audits file hashes.
description:
    A command line application that computes file hashes traversing recursively
    through a directory structure.
    The known hashes can be used to audit the same directory structure of a copy
    of it.
category:            Console, Cryptography, System
extra-source-files:
    README.md

library
  hs-source-dirs:   src
  exposed-modules:
    HaskDeep
    HaskDeep.Computation
    HaskDeep.ComputationMode
    HaskDeep.Configuration
    HaskDeep.HashSet
    HaskDeep.KnownHash.Reader
    HaskDeep.KnownHash.Writer
  build-depends:
      attoparsec         ==0.10.*
    , attoparsec-conduit ==0.5.*
    , base               ==4.5.*
    , bytestring         ==0.9.*
    , cereal             ==0.3.*
    , conduit            ==0.5.*
    , containers         ==0.4.*
    , cryptohash         ==0.7.*
    , crypto-api         ==0.10.*
    , crypto-conduit     ==0.4.*
    , filesystem-conduit ==0.5.*
    , system-fileio      ==0.3.*
    , system-filepath    ==0.4.*
    , text               ==0.11.*
    , regex-tdfa         ==1.1.*
    , regex-tdfa-text    ==1.0.*
  ghc-options: -Wall

executable haskdeep
  hs-source-dirs:   haskdeep
  main-is:          Main.hs
  other-modules:
    HaskDeep.Command.Main
    HaskDeep.Command.Options
  build-depends:
      base                 ==4.5.*
    , crypto-api           ==0.10.*
    , haskdeep             ==0.1.*
    , optparse-applicative ==0.4.*
    , time                 ==1.4.*
    , system-filepath      ==0.4.*
    , text                 ==0.11.*
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/maurotrb/haskdeep.git
